--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
         <section class="services">
             <div class="service-card" onclick="openFullscreenModal(0)">
                 <div class="thumbnail-container">
-                    <img src="wp-başlık.jpg" alt="WhatsApp Yapay Zeka" class="thumbnail">
+                    <img src="fotoğraflar/wp-başlık.jpg" alt="WhatsApp Yapay Zeka" class="thumbnail">
                 </div>
                 <div class="service-info">
                     <h3><i class="fas fa-robot"></i> WhatsApp 7/24 Asistan Otomasyonu</h3>
@@ -665,7 +665,7 @@
             
             <div class="service-card" onclick="openFullscreenModal(1)">
                 <div class="thumbnail-container">
-                    <img src="stok-başlık.jpg" alt="Stok Takip Otomasyonu" class="thumbnail">
+                    <img src="fotoğraflar/stok-başlık.jpg" alt="Stok Takip Otomasyonu" class="thumbnail">
                 </div>
                 <div class="service-info">
                     <h3><i class="fas fa-robot"></i> Stok Takip Otomasyonu</h3>
@@ -676,7 +676,7 @@
 
              <div class="service-card" onclick="openFullscreenModal(2)">
                 <div class="thumbnail-container">
-                    <img src="hisse-başlık.png" alt="hisse takip otomasyonu" class="thumbnail">
+                    <img src="fotoğraflar/hisse-başlık.png" alt="hisse takip otomasyonu" class="thumbnail">
                 </div>
                 <div class="service-info">
                     <h3><i class="fas fa-robot"></i> hisse takip otomasyonu</h3>
@@ -687,7 +687,7 @@
 
              <div class="service-card" onclick="openFullscreenModal(3)">
                 <div class="thumbnail-container">
-                    <img src="chatbot-başlık.png" alt="Yapay zeka entegreli Web Site Chatbot" class="thumbnail">
+                    <img src="fotoğraflar/chatbot-başlık.png" alt="Yapay zeka entegreli Web Site Chatbot" class="thumbnail">
                 </div>
                 <div class="service-info">
                     <h3><i class="fas fa-robot"></i> Yapay zeka entegreli Web Site Chatbot</h3>
@@ -698,7 +698,7 @@
 
              <div class="service-card" onclick="openFullscreenModal(4)">
                 <div class="thumbnail-container">
-                    <img src="fatura-1.jpg" alt="Görüntü'den Fatura İşleme otomasyonu" class="thumbnail">
+                    <img src="fotoğraflar/fatura-1.jpg" alt="Görüntü'den Fatura İşleme otomasyonu" class="thumbnail">
                 </div>
                 <div class="service-info">
                     <h3><i class="fas fa-robot"></i> Görüntü'den Fatura İşleme otomasyonu</h3>
@@ -812,48 +812,48 @@
                 description: "WhatsApp üzerinden gelen müşteri sorularını 7/24 anında yanıtlayan ve randevu oluşturan,güncelleyen ve silen bir emlak otomasyon oluşturduk.",
                 images: [
                     {
-                        url: "wp-1.jpg",
+                        url: "fotoğraflar/wp-1.jpg",
                         description: "WhatsApp Yapay Zeka çözümümüz, müşterilerinize 7/24 kesintisiz hizmet sunar. Sizler uyurken iş bağlar ve verileri işler."
                     },
                     {
-                        url: "wp-2.jpg",
+                        url: "fotoğraflar/wp-2.jpg",
                         description: "Emlak sektörüne özel geliştirdiğimiz modüller sayesinde randevu yönetimi, müşteri takibi ve satış süreçlerini otomatikleştirebilirsiniz."
     
                     },
                     {
-                        url: "wp-3.jpg",
+                        url: "fotoğraflar/wp-3.jpg",
                         description: "Yapay zeka özel olarak randevu no hazırlar."
                     },
                     {
-                        url: "wp-4.jpg",
+                        url: "fotoğraflar/wp-4.jpg",
                         description: "Randevu no ile müşteri tarih&saat güncelleyebilir."
                     },
                     {
-                        url: "wp-5.jpg",
+                        url: "fotoğraflar/wp-5.jpg",
                         description: ""
                     },
                     {
-                        url: "wp-6.jpg",
+                        url: "fotoğraflar/wp-6.jpg",
                         description: "Vermiş olduğunuz bilgiler doğrultusunda müşteriye bilgiler iletilir."
                     },
                      {
-                        url: "wp-7.jpg",
+                        url: "fotoğraflar/wp-7.jpg",
                         description: "Eğer o tarih&saat ranndevu doluysa başka tarih&saat ister."
                     },
                      {
-                        url: "wp-8.jpg",
+                        url: "fotoğraflar/wp-8.jpg",
                         description: "Müşterinin soracağı soruları düşünerek cevap verir."
                     },
                      {
-                        url: "wp-9.jpg",
+                        url: "fotoğraflar/wp-9.jpg",
                         description: "Randevu no ile birlikte randevular iptal edilebilir."
                     },
                       {
-                        url: "wp-10.jpg",
+                        url: "fotoğraflar/wp-10.jpg",
                         description: "alınan veiler google sheets işlenir."
                     },
                     {
-                        url: "wp-11.jpg",
+                        url: "fotoğraflar/wp-11.jpg",
                         description: "alınan randevular google calendar'a işlenir."
                     }
                 ]
@@ -863,15 +863,15 @@
                 description: "Telegram için geliştirdiğimiz özel yapay zeka çözümü ile müşteri etkileşimlerinizi bir üst seviyeye taşıyın.",
                 images: [
                     {
-                        url: "stok-1.jpg",
+                        url: "fotoğraflar/stok-1.jpg",
                         description: "Telegram Yapay Zeka asistanımız, gruplarda ve kanallarda otomatik yanıtlar verebilir, üyeleri yönlendirebilir ve topluluk yönetimini kolaylaştırır."
                     },
                     {
-                        url: "stok-2.jpg",
+                        url: "fotoğraflar/stok-2.jpg",
                         description: "Medya dosyalarını işleyebilme yeteneği sayesinde resim, video ve belgeleri anlayabilir, uygun yanıtlar verebilir."
                     },
                     {
-                        url: "stok-3.jpg",
+                        url: "fotoğraflar/stok-3.jpg",
                         description: "Gelişmiş entegrasyon seçenekleri ile mevcut sistemlerinize kolayca bağlanabilir, veri akışını otomatikleştirebilirsiniz."
                     }
                 ]
@@ -881,19 +881,19 @@
                 description: "Telegram için geliştirdiğimiz özel yapay zeka çözümü ile müşteri etkileşimlerinizi bir üst seviyeye taşıyın.",
                 images: [
                     {
-                        url: "hisse-1.jpg",
+                        url: "fotoğraflar/hisse-1.jpg",
                         description: "Telegram Yapay Zeka asistanımız, gruplarda ve kanallarda otomatik yanıtlar verebilir, üyeleri yönlendirebilir ve topluluk yönetimini kolaylaştırır."
                     },
                     {
-                        url: "hisse-2.jpg",
+                        url: "fotoğraflar/hisse-2.jpg",
                         description: "Medya dosyalarını işleyebilme yeteneği sayesinde resim, video ve belgeleri anlayabilir, uygun yanıtlar verebilir."
                     },
                       {
-                        url: "hisse-3.jpg",
+                        url: "fotoğraflar/hisse-3.jpg",
                         description: "Medya dosyalarını işleyebilme yeteneği sayesinde resim, video ve belgeleri anlayabilir, uygun yanıtlar verebilir."
                     },
                     {
-                        url: "hisse-4.jpg",
+                        url: "fotoğraflar/hisse-4.jpg",
                         description: "Gelişmiş entegrasyon seçenekleri ile mevcut sistemlerinize kolayca bağlanabilir, veri akışını otomatikleştirebilirsiniz."
                     }
                 ]
@@ -903,11 +903,11 @@
                 description: "Telegram için geliştirdiğimiz özel yapay zeka çözümü ile müşteri etkileşimlerinizi bir üst seviyeye taşıyın.",
                 images: [
                     {
-                        url: "chatbot-1.jpg",
+                        url: "fotoğraflar/chatbot-1.jpg",
                         description: "Telegram Yapay Zeka asistanımız, gruplarda ve kanallarda otomatik yanıtlar verebilir, üyeleri yönlendirebilir ve topluluk yönetimini kolaylaştırır."
                     },
          {
-                        url: "chatbot-2.jpg",
+                        url: "fotoğraflar/chatbot-2.jpg",
                         description: "Gelişmiş entegrasyon seçenekleri ile mevcut sistemlerinize kolayca bağlanabilir, veri akışını otomatikleştirebilirsiniz."
                     }
                 ]
@@ -917,11 +917,11 @@
                 description: "Telegram için geliştirdiğimiz özel yapay zeka çözümü ile müşteri etkileşimlerinizi bir üst seviyeye taşıyın.",
                 images: [
                     {
-                        url: "fatura-1.jpg",
+                        url: "fotoğraflar/fatura-1.jpg",
                         description: "Telegram Yapay Zeka asistanımız, gruplarda ve kanallarda otomatik yanıtlar verebilir, üyeleri yönlendirebilir ve topluluk yönetimini kolaylaştırır."
                     },
                     {
-                        url: "fatura-2.png",
+                        url: "fotoğraflar/fatura-2.png",
                         description: "Gelişmiş entegrasyon seçenekleri ile mevcut sistemlerinize kolayca bağlanabilir, veri akışını otomatikleştirebilirsiniz."
                     }
                 ]
@@ -931,19 +931,19 @@
                 description: "Web siteniz için geliştirdiğimiz yapay zeka asistanları ile müşteri memnuniyetini artırın ve satışlarınızı katlayın.",
                 images: [
                     {
-                        url: "hisse-1.jpg",
+                        url: "fotoğraflar/hisse-1.jpg",
                         description: "Web siteniz için özelleştirilebilir chatbot arayüzü ile markanıza uygun, şık ve kullanışlı bir asistan sunuyoruz."
                     },
                     {
-                        url: "hisse-2.jpg",
+                        url: "fotoğraflar/hisse-2.jpg",
                         description: "E-ticaret entegrasyonu ile ürün önerebilen, sipariş takibi yapabilen ve müşteri memnuniyetini artıran akıllı çözümler."
                     },
                     {
-                        url: "hisse-3.jpg",
+                        url: "fotoğraflar/hisse-3.jpg",
                         description: "Lead generation (müşteri adayı oluşturma) özellikleri ile potansiyel müşterileri yakalayın ve satış ekibinize yönlendirin."
                     },
                     {
-                        url: "hisse-4.jpg",
+                        url: "fotoğraflar/hisse-4.jpg",
                         description: "SEO uyumlu ve arama motorları tarafından indekslenebilen sohbet içeriği ile web sitenizin trafiğini artırın."
                     }
                 ]
