--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
         <section class="services">
             <div class="service-card" onclick="openFullscreenModal(0)">
                 <div class="thumbnail-container">
-                    <img src="https://github.com/aziz2055/ai_otomasyonlar/blob/main/foto%C4%9Fraflar/wp-ba%C5%9Fl%C4%B1k.jpg" alt="WhatsApp Yapay Zeka" class="thumbnail">
+                    <img src="fotoğraflar/wp-başlık.jpg" alt="WhatsApp Yapay Zeka" class="thumbnail">
                 </div>
                 <div class="service-info">
                     <h3><i class="fas fa-robot"></i> WhatsApp 7/24 Asistan Otomasyonu</h3>
@@ -665,7 +665,7 @@
             
             <div class="service-card" onclick="openFullscreenModal(1)">
                 <div class="thumbnail-container">
-                    <img src="https://github.com/aziz2055/ai_otomasyonlar/blob/main/foto%C4%9Fraflar/stok-ba%C5%9Fl%C4%B1k.jpg" alt="Stok Takip Otomasyonu" class="thumbnail">
+                    <img src="fotoğraflar/stok-başlık.jpg" alt="Stok Takip Otomasyonu" class="thumbnail">
                 </div>
                 <div class="service-info">
                     <h3><i class="fas fa-robot"></i> Stok Takip Otomasyonu</h3>
@@ -676,7 +676,7 @@
 
              <div class="service-card" onclick="openFullscreenModal(2)">
                 <div class="thumbnail-container">
-                    <img src="https://github.com/aziz2055/ai_otomasyonlar/blob/main/foto%C4%9Fraflar/hisse-ba%C5%9Fl%C4%B1k.png" alt="hisse takip otomasyonu" class="thumbnail">
+                    <img src="fotoğraflar/hisse-başlık.png" alt="hisse takip otomasyonu" class="thumbnail">
                 </div>
                 <div class="service-info">
                     <h3><i class="fas fa-robot"></i> hisse takip otomasyonu</h3>
@@ -698,7 +698,7 @@
 
              <div class="service-card" onclick="openFullscreenModal(4)">
                 <div class="thumbnail-container">
-                    <img src="https://github.com/aziz2055/ai_otomasyonlar/blob/main/foto%C4%9Fraflar/chatbot-ba%C5%9Fl%C4%B1k.png" alt="Görüntü'den Fatura İşleme otomasyonu" class="thumbnail">
+                    <img src="" alt="Görüntü'den Fatura İşleme otomasyonu" class="thumbnail">
                 </div>
                 <div class="service-info">
                     <h3><i class="fas fa-robot"></i> Görüntü'den Fatura İşleme otomasyonu</h3>
