--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
                     WhatsApp, Telegram ve web siteniz için özelleştirilmiş yapay zeka asistanları. Doğal dil işleme teknolojisiyle müşterilerinizle insan gibi konuşan, 
                     soruları anlayan ve doğru yanıtlar veren akıllı sistemler.
                 </p>
-                <a href="#contact" class="contact-btn">HEMEN TEKLİF ALIN</a>
+                <a href="https://wa.me/90552632770?text=yapay%20zeka%20otomasyon%20bilgi%20almak%20istiyorum" class="contact-btn">HEMEN TEKLİF ALIN</a>
             </div>
         </section>
         
@@ -778,8 +778,8 @@
                 <a href="#"><i class="fas fa-envelope"></i></a>
                 <a href="#"><i class="fas fa-phone"></i></a>
             </div>
-            <p>&copy; 2023 Tüm Hakları Saklıdır. | 7/24 Yapay Zeka Destekli İletişim Çözümleri</p>
-            <p>Bizimle iletişime geçin: info@yapayzekailetisim.com | +90 500 000 00 00</p>
+            <p>&copy; 7/24 Yapay Zeka Destekli İletişim Çözümleri</p>
+            <p>Bizimle whatsap'tan iletişime geçin : +90 553 263 2770</p>
         </footer>
     </div>
     
@@ -921,29 +921,29 @@
                         description: "Telegram Yapay Zeka asistanımız, gruplarda ve kanallarda otomatik yanıtlar verebilir, üyeleri yönlendirebilir ve topluluk yönetimini kolaylaştırır."
                     },
                     {
-                        url: "fotoğraflar/fatura-2.png",
+                        url: "fotoğraflar/Fatura-2.png",
                         description: "Gelişmiş entegrasyon seçenekleri ile mevcut sistemlerinize kolayca bağlanabilir, veri akışını otomatikleştirebilirsiniz."
                     }
                 ]
             },
             {
-                name: "hisse takip otomasyonu",
+                name: "",
                 description: "Web siteniz için geliştirdiğimiz yapay zeka asistanları ile müşteri memnuniyetini artırın ve satışlarınızı katlayın.",
                 images: [
                     {
-                        url: "fotoğraflar/hisse-1.jpg",
+                        url: "",
                         description: "Web siteniz için özelleştirilebilir chatbot arayüzü ile markanıza uygun, şık ve kullanışlı bir asistan sunuyoruz."
                     },
                     {
-                        url: "fotoğraflar/hisse-2.jpg",
+                        url: "",
                         description: "E-ticaret entegrasyonu ile ürün önerebilen, sipariş takibi yapabilen ve müşteri memnuniyetini artıran akıllı çözümler."
                     },
                     {
-                        url: "fotoğraflar/hisse-3.jpg",
+                        url: "",
                         description: "Lead generation (müşteri adayı oluşturma) özellikleri ile potansiyel müşterileri yakalayın ve satış ekibinize yönlendirin."
                     },
                     {
-                        url: "fotoğraflar/hisse-4.jpg",
+                        url: "",
                         description: "SEO uyumlu ve arama motorları tarafından indekslenebilen sohbet içeriği ile web sitenizin trafiğini artırın."
                     }
                 ]
