--- a/index.html
+++ b/index.html
@@ -921,7 +921,7 @@
                         description: "Telegram Yapay Zeka asistanımız, gruplarda ve kanallarda otomatik yanıtlar verebilir, üyeleri yönlendirebilir ve topluluk yönetimini kolaylaştırır."
                     },
                     {
-                        url: "fotoğraflar/Fatura-2.png",
+                        url: "WhatsApp Görsel 2025-09-12 saat 19.08.03_8c59be39.jpg",
                         description: "Gelişmiş entegrasyon seçenekleri ile mevcut sistemlerinize kolayca bağlanabilir, veri akışını otomatikleştirebilirsiniz."
                     }
                 ]
