--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
 
              <div class="service-card" onclick="openFullscreenModal(4)">
                 <div class="thumbnail-container">
-                    <img src="" alt="Görüntü'den Fatura İşleme otomasyonu" class="thumbnail">
+                    <img src="WhatsApp Görsel 2025-09-11 saat 16.08.19_efbdb551.jpg" alt="Görüntü'den Fatura İşleme otomasyonu" class="thumbnail">
                 </div>
                 <div class="service-info">
                     <h3><i class="fas fa-robot"></i> Görüntü'den Fatura İşleme otomasyonu</h3>
