--- a/index.html
+++ b/index.html
@@ -860,91 +860,91 @@
             },
             {
                 name: "Stok Takip Otomasyonu",
-                description: "Telegram için geliştirdiğimiz özel yapay zeka çözümü ile müşteri etkileşimlerinizi bir üst seviyeye taşıyın.",
+                description: "",
                 images: [
                     {
                         url: "fotoğraflar/stok-1.jpg",
-                        description: "Telegram Yapay Zeka asistanımız, gruplarda ve kanallarda otomatik yanıtlar verebilir, üyeleri yönlendirebilir ve topluluk yönetimini kolaylaştırır."
+                        description: ""
                     },
                     {
                         url: "fotoğraflar/stok-2.jpg",
-                        description: "Medya dosyalarını işleyebilme yeteneği sayesinde resim, video ve belgeleri anlayabilir, uygun yanıtlar verebilir."
+                        description: ""
                     },
                     {
                         url: "fotoğraflar/stok-3.jpg",
-                        description: "Gelişmiş entegrasyon seçenekleri ile mevcut sistemlerinize kolayca bağlanabilir, veri akışını otomatikleştirebilirsiniz."
+                        description: ""
                     }
                 ]
             },
             {
                 name: "hisse takip otomasyonu",
-                description: "Telegram için geliştirdiğimiz özel yapay zeka çözümü ile müşteri etkileşimlerinizi bir üst seviyeye taşıyın.",
+                description: "",
                 images: [
                     {
                         url: "fotoğraflar/hisse-1.jpg",
-                        description: "Telegram Yapay Zeka asistanımız, gruplarda ve kanallarda otomatik yanıtlar verebilir, üyeleri yönlendirebilir ve topluluk yönetimini kolaylaştırır."
+                        description: ""
                     },
                     {
                         url: "fotoğraflar/hisse-2.jpg",
-                        description: "Medya dosyalarını işleyebilme yeteneği sayesinde resim, video ve belgeleri anlayabilir, uygun yanıtlar verebilir."
+                        description: ""
                     },
                       {
                         url: "fotoğraflar/hisse-3.jpg",
-                        description: "Medya dosyalarını işleyebilme yeteneği sayesinde resim, video ve belgeleri anlayabilir, uygun yanıtlar verebilir."
+                        description: ""
                     },
                     {
                         url: "fotoğraflar/hisse-4.jpg",
-                        description: "Gelişmiş entegrasyon seçenekleri ile mevcut sistemlerinize kolayca bağlanabilir, veri akışını otomatikleştirebilirsiniz."
+                        description: ""
                     }
                 ]
             },
             {
                 name: "Yapay zeka entegreli Web Site Chatbot",
-                description: "Telegram için geliştirdiğimiz özel yapay zeka çözümü ile müşteri etkileşimlerinizi bir üst seviyeye taşıyın.",
+                description: "",
                 images: [
                     {
                         url: "fotoğraflar/chatbot-1.jpg",
-                        description: "Telegram Yapay Zeka asistanımız, gruplarda ve kanallarda otomatik yanıtlar verebilir, üyeleri yönlendirebilir ve topluluk yönetimini kolaylaştırır."
+                        description: ""
                     },
          {
                         url: "fotoğraflar/chatbot-2.jpg",
-                        description: "Gelişmiş entegrasyon seçenekleri ile mevcut sistemlerinize kolayca bağlanabilir, veri akışını otomatikleştirebilirsiniz."
+                        description: ""
                     }
                 ]
             },
             {
                 name: "Görüntü'den Fatura İşleme otomasyonu",
-                description: "Telegram için geliştirdiğimiz özel yapay zeka çözümü ile müşteri etkileşimlerinizi bir üst seviyeye taşıyın.",
+                description: "",
                 images: [
                     {
                         url: "fotoğraflar/fatura-1.jpg",
-                        description: "Telegram Yapay Zeka asistanımız, gruplarda ve kanallarda otomatik yanıtlar verebilir, üyeleri yönlendirebilir ve topluluk yönetimini kolaylaştırır."
+                        description: ""
                     },
                     {
                         url: "WhatsApp Görsel 2025-09-12 saat 19.08.03_8c59be39.jpg",
-                        description: "Gelişmiş entegrasyon seçenekleri ile mevcut sistemlerinize kolayca bağlanabilir, veri akışını otomatikleştirebilirsiniz."
+                        description: ""
                     }
                 ]
             },
             {
                 name: "",
-                description: "Web siteniz için geliştirdiğimiz yapay zeka asistanları ile müşteri memnuniyetini artırın ve satışlarınızı katlayın.",
+                description: ".",
                 images: [
                     {
                         url: "",
-                        description: "Web siteniz için özelleştirilebilir chatbot arayüzü ile markanıza uygun, şık ve kullanışlı bir asistan sunuyoruz."
+                        description: ""
                     },
                     {
                         url: "",
-                        description: "E-ticaret entegrasyonu ile ürün önerebilen, sipariş takibi yapabilen ve müşteri memnuniyetini artıran akıllı çözümler."
+                        description: ""
                     },
                     {
                         url: "",
-                        description: "Lead generation (müşteri adayı oluşturma) özellikleri ile potansiyel müşterileri yakalayın ve satış ekibinize yönlendirin."
+                        description: ""
                     },
                     {
                         url: "",
-                        description: "SEO uyumlu ve arama motorları tarafından indekslenebilen sohbet içeriği ile web sitenizin trafiğini artırın."
+                        description: ""
                     }
                 ]
             }
