--- a/index.html
+++ b/index.html
@@ -921,7 +921,7 @@
                         description: ""
                     },
                     {
-                        url: "WhatsApp Görsel 2025-09-12 saat 19.08.03_8c59be39.jpg",
+                        url: "WhatsApp Görsel 2025-09-13 saat 13.18.23_f707fe11.jpg",
                         description: ""
                     }
                 ]
