--- a/index.html
+++ b/index.html
@@ -669,6 +669,7 @@
                     <h3><i class="fas fa-robot"></i> WhatsApp 7/24 Asistan</h3>
                     <p>WhatsApp üzerinden May emlak asistanımızla 7/24 müşteri etkileşimi sağlayın!</p>
                     <a class="read-more">Detayları Görüntüle</a>
+    
                 </div>
             </div>
             
@@ -774,20 +775,40 @@
             <h2>Sıkça Sorulan Sorular</h2>
             <div class="faq-container">
                 <div class="faq-item">
-                    <div class="faq-question">Yapay zeka asistanları nasıl çalışır? <i class="fas fa-chevron-down"></i></div>
-                    <div class="faq-answer">Doğal dil işleme (NLP) ile sorularınızı anlar ve 7/24 yanıt verir. WhatsApp, Telegram veya webde çalışır.</div>
+                    <div class="faq-question">KURULUM ÜCRETİ VAR MI? <i class="fas fa-chevron-down"></i></div>
+                    <div class="faq-answer">Hayır,bizde kurulum ücreti yoktur.</div>
                 </div>
                 <div class="faq-item">
-                    <div class="faq-question">Hangi platformlarla uyumlu? <i class="fas fa-chevron-down"></i></div>
-                    <div class="faq-answer">WhatsApp, Telegram, web siteleri ve Google Sheets/Calendar ile tam uyumlu.</div>
+                    <div class="faq-question">BAKIM NASIL YAPILIYOR? <i class="fas fa-chevron-down"></i></div>
+                    <div class="faq-answer">Hizmetimizde sürekli ve otomatik kontrollerle işlerinizin kusursuz ilerlemesini sağlıyoruz..</div>
                 </div>
                 <div class="faq-item">
-                    <div class="faq-question">Kurulum ne kadar sürer? <i class="fas fa-chevron-down"></i></div>
-                    <div class="faq-answer">İhtiyaçlarınıza bağlı olarak 1-3 iş günü içinde kurulum tamamlanır.</div>
+                    <div class="faq-question">ÜCRET NE KADAR? <i class="fas fa-chevron-down"></i></div>
+                    <div class="faq-answer">Sistemimizi kullanmanız halinde, aylık bir bakım ücreti alınacaktır. Eğer farklı otomasyon sistemlerinden de faydalanmak isterseniz, bu hizmetler için ek ücret talep edilir. Daha detaylı bilgi almak için lütfen WhatsApp hattımızdan bizimle iletişime geçin. 📱.</div>
                 </div>
                 <div class="faq-item">
-                    <div class="faq-question">Ücretsiz tokenlar nasıl kullanılır? <i class="fas fa-chevron-down"></i></div>
-                    <div class="faq-answer">1.000.000 ücretsiz token ile hizmetlerimizi test edebilirsiniz.</div>
+                    <div class="faq-question">İNDİRİM SAĞLIYOR MUSUNUZ? <i class="fas fa-chevron-down"></i></div>
+                    <div class="faq-answer">Ekibimizin özel hazırladığı avantajlı indirimlerden faydalanmak için WhatsApp'tan bizimle iletişime geçin..</div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-question">TOKEN NEDİR? <i class="fas fa-chevron-down"></i></div>
+                    <div class="faq-answer">Token, dijital dünyada bir değeri, yetkiyi veya kimliği temsil eden sanal bir birimdir. En basit şekilde, token'ı dijital bir bilet, kupon veya anahtar gibi düşünebilirsiniz.</div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-question">TOKEN ABONELİĞİN İÇİNE DAHİL Mİ? <i class="fas fa-chevron-down"></i></div>
+                    <div class="faq-answer">Sistemlerimizden en iyi şekilde faydalanmanız için size aylık 1.000.000 tokenlık bir kullanım hakkı sunuyoruz. Eğer bu limit yeterli gelmezse, dilediğiniz zaman ek bir 1.000.000 token paketi satın alabilirsiniz.</div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-question">TOKEN NE KADAR? <i class="fas fa-chevron-down"></i></div>
+                    <div class="faq-answer">Size en uygun fiyatlandırmayı sunabilmek için, kullandığınız sistemlere göre token fiyatları değişiklik göstermektedir. Ortalama bir fiyat bilgisi almak ve detayları öğrenmek için lütfen WhatsApp hattımızdan bizimle iletişime geçin.</div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-question">SİSTEM KURULUMU NE KADAR SÜRER? <i class="fas fa-chevron-down"></i></div>
+                    <div class="faq-answer">İsteklerinize göre bağlı olarak 1-3 iş günü içinde kurulum tamamlanır.</div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-question">FİYATLANDIRMA <i class="fas fa-chevron-down"></i></div>
+                    <div class="faq-answer">Fityat bilgisi için whatsap'tan iletişime geçin.</div>
                 </div>
             </div>
         </section>
