--- a/index.html
+++ b/index.html
@@ -898,6 +898,43 @@
                     { url: "fotoğraflar/fatura-1.jpg", description: "" },
                     { url: "WhatsApp Görsel 2025-09-13 saat 13.18.23_f707fe11.jpg", description: "" }
                 ]
+                },
+            {
+                name: "E-posta Etiketleme Otomasyonu",
+                description: "",
+                images: [
+                    { url: "WhatsApp Görsel 2025-09-12 saat 16.31.29_caf23c78.jpg", description: "" },
+                    { url: "fotoğraflar/WhatsApp Görsel 2025-09-12 saat 16.39.24_f287f5a0.jpg", description: "" },
+                    { url: "fotoğraflar/WhatsApp Görsel 2025-09-12 saat 16.39.50_dd9a0a55.jpg", description: "" },
+                    { url: "fotoğraflar/WhatsApp Görsel 2025-09-12 saat 16.38.24_a87454e9.jpg", description: "" },
+                    { url: "fotoğraflar/WhatsApp Görsel 2025-09-12 saat 16.32.42_096dcbad.jpg", description: "" }
+                ]
+                 {
+                name: "Belge Özetleyici",
+                description: "",
+                images: [
+                    { url: "fotoğraflar/WhatsApp Görsel 2025-09-13 saat 22.22.33_13032616.jpg", description: "" },
+                    { url: "fotoğraflar/WhatsApp Görsel 2025-09-13 saat 22.23.04_bb08841e.jpg", description: "" }
+                ]
+             {
+                name: "Cv Özetleyici",
+                description: "Mail üzerinden gelen cv'leri özetler",
+                images: [
+                    { url: "fotoğraflar/WhatsApp Görsel 2025-09-13 saat 22.41.23_df57848f.jpg", description: "" },
+                    { url: "fotoğraflar/WhatsApp Görsel 2025-09-14 saat 16.10.23_98993ab8.jpg", description: "" }
+                ]
+                   {
+                name: "Gmail Otomasyon Sistemi",
+                description: "",
+                images: [
+                    { url: "fotoğraflar/WhatsApp Görsel 2025-09-14 saat 16.12.05_78532bdd.jpg", description: "" },
+                    { url: "fotoğraflar/WhatsApp Görsel 2025-09-14 saat 16.12.05_93ec5357.jpg", description: "" },
+                    { url: "fotoğraflar/WhatsApp Görsel 2025-09-14 saat 16.12.06_61bcd2ca.jpg", description: "" },
+                    { url: "fotoğraflar/WhatsApp Görsel 2025-09-14 saat 16.12.06_6e3f2ce8.jpg", description: "" },
+                    { url: "fotoğraflar/WhatsApp Görsel 2025-09-14 saat 16.12.06_fad932fe.jpg", description: "" }
+                ]
+            
+                },
             }
         ];
         
