--- a/index.html
+++ b/index.html
@@ -716,6 +716,50 @@
                     <a class="read-more">Detayları Görüntüle</a>
                 </div>
             </div>
+
+            <div class="service-card" onclick="openFullscreenModal(5)">
+                <div class="thumbnail-container">
+                    <img src="" alt="E-posta Etiketleme Otomasyonu" class="thumbnail">
+                </div>
+                <div class="service-info">
+                    <h3><i class="fas fa-robot"></i> Fatura İşleme Otomasyonu</h3>
+                    <p>Faturaları Google Sheets'e işleyen otomasyonla muhasebenizi kolaylaştırın!</p>
+                    <a class="read-more">Detayları Görüntüle</a>
+                </div>
+            </div>
+
+            <div class="service-card" onclick="openFullscreenModal(6)">
+                <div class="thumbnail-container">
+                    <img src="" alt="Belge Özetleyici " class="thumbnail">
+                </div>
+                <div class="service-info">
+                    <h3><i class="fas fa-robot"></i> Fatura İşleme Otomasyonu</h3>
+                    <p>Faturaları Google Sheets'e işleyen otomasyonla muhasebenizi kolaylaştırın!</p>
+                    <a class="read-more">Detayları Görüntüle</a>
+                </div>
+            </div>
+
+            <div class="service-card" onclick="openFullscreenModal(7)">
+                <div class="thumbnail-container">
+                    <img src="" alt="Cv Özetleyici" class="thumbnail">
+                </div>
+                <div class="service-info">
+                    <h3><i class="fas fa-robot"></i> Fatura İşleme Otomasyonu</h3>
+                    <p>Faturaları Google Sheets'e işleyen otomasyonla muhasebenizi kolaylaştırın!</p>
+                    <a class="read-more">Detayları Görüntüle</a>
+                </div>
+            </div>
+
+            <div class="service-card" onclick="openFullscreenModal(8)">
+                <div class="thumbnail-container">
+                    <img src="" alt="Gmail Otomasyon Sistemi" class="thumbnail">
+                </div>
+                <div class="service-info">
+                    <h3><i class="fas fa-robot"></i> Fatura İşleme Otomasyonu</h3>
+                    <p>Faturaları Google Sheets'e işleyen otomasyonla muhasebenizi kolaylaştırın!</p>
+                    <a class="read-more">Detayları Görüntüle</a>
+                </div>
+            </div>
         </section>
         
         <!-- Token Hesaplayıcı Bölümü -->
@@ -910,7 +954,7 @@
                     { url: "fotoğraflar/WhatsApp Görsel 2025-09-12 saat 16.32.42_096dcbad.jpg", description: "" }
                 ]
                  {
-                name: "Belge Özetleyici",
+               name: "Belge Özetleyici",
                 description: "",
                 images: [
                     { url: "fotoğraflar/WhatsApp Görsel 2025-09-13 saat 22.22.33_13032616.jpg", description: "" },
