--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
 
             <div class="service-card" onclick="openFullscreenModal(5)">
                 <div class="thumbnail-container">
-                    <img src="" alt="E-posta Etiketleme Otomasyonu" class="thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <img src="WhatsApp Görsel 2025-09-12 saat 16.31.29_caf23c78.jpg" alt="E-posta Etiketleme Otomasyonu" class="thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="thumbnail-placeholder" style="display: none;">
                         <i class="fas fa-image" style="font-size: 24px; margin-bottom: 8px;"></i>
                         <p>Görsel yüklenemedi</p>
@@ -776,7 +776,7 @@
 
             <div class="service-card" onclick="openFullscreenModal(6)">
                 <div class="thumbnail-container">
-                    <img src="" alt="Belge Özetleyici" class="thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <img src="fotoğraflar/WhatsApp Görsel 2025-09-13 saat 22.22.33_13032616.jpg" alt="Belge Özetleyici" class="thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="thumbnail-placeholder" style="display: none;">
                         <i class="fas fa-image" style="font-size: 24px; margin-bottom: 8px;"></i>
                         <p>Görsel yüklenemedi</p>
@@ -791,7 +791,7 @@
 
             <div class="service-card" onclick="openFullscreenModal(7)">
                 <div class="thumbnail-container">
-                    <img src="" alt="CV Özetleyici" class="thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <img src="fotoğraflar/WhatsApp Görsel 2025-09-13 saat 22.41.23_df57848f.jpg" alt="CV Özetleyici" class="thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="thumbnail-placeholder" style="display: none;">
                         <i class="fas fa-image" style="font-size: 24px; margin-bottom: 8px;"></i>
                         <p>Görsel yüklenemedi</p>
@@ -806,7 +806,7 @@
 
             <div class="service-card" onclick="openFullscreenModal(8)">
                 <div class="thumbnail-container">
-                    <img src="" alt="Gmail Otomasyon Sistemi" class="thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <img src="fotoğraflar/WhatsApp Görsel 2025-09-14 saat 16.12.05_93ec5357.jpg" alt="Gmail Otomasyon Sistemi" class="thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="thumbnail-placeholder" style="display: none;">
                         <i class="fas fa-image" style="font-size: 24px; margin-bottom: 8px;"></i>
                         <p>Görsel yüklenemedi</p>
