--- a/index.html
+++ b/index.html
@@ -908,6 +908,29 @@
                     <div class="faq-question">SİSTEM KURULUMU NE KADAR SÜRER? <i class="fas fa-chevron-down"></i></div>
                     <div class="faq-answer">İsteklerinize göre bağlı olarak 1-3 iş günü içinde kurulum tamamlanır.</div>
                 </div>
+                   </div>
+                <div class="faq-item">
+                    <div class="faq-question">NASIL ÇALIŞIYOR? <i class="fas fa-chevron-down"></i></div>
+                    <div class="faq-answer">Yapay zeka sistemlerimiz kişiye özel olarak geliştirilir ve %100 yapay zeka ile çalışır.</div>
+                </div>
+               </div>
+                <div class="faq-item">
+                    <div class="faq-question">SİSTEMLERİNİZ NEYE ENTEGRELİ? <i class="fas fa-chevron-down"></i></div>
+                    <div class="faq-answer">Whatsap , telegram , google calendar , google docs , google sheets ve gmail entegrelidir .</div>
+                </div>
+            </div>
+                <div class="faq-item">
+                    <div class="faq-question">KİŞİYE ÖZEL Mİ? <i class="fas fa-chevron-down"></i></div>
+                    <div class="faq-answer">Sistemlerimiz kişiye ve işletmelere özel yapılır ve teslim edilir.</div>
+                </div>
+             </div>
+                <div class="faq-item">
+                    <div class="faq-question">FARKIMIZ? <i class="fas fa-chevron-down"></i></div>
+                    <div class="faq-answer">Sistemlerimiz size özel olarak hazırlanır.</div>
+                    <p>- 7/24 sistemler çalışır <p>
+                    <p>- Sistemler hergün bakım yapılır <p>
+                   <p> - sizin verdiğiniz bilgiler doğrultusunda 10 çalışana eş değerdir <p>
+                </div>
                 <div class="faq-item">
                     <div class="faq-question">FİYATLANDIRMA <i class="fas fa-chevron-down"></i></div>
                     <div class="faq-answer">Fityat bilgisi için whatsap'tan iletişime geçin.</div>
