--- a/index.html
+++ b/index.html
@@ -926,10 +926,10 @@
              </div>
                 <div class="faq-item">
                     <div class="faq-question">FARKIMIZ? <i class="fas fa-chevron-down"></i></div>
-                    <div class="faq-answer">Sistemlerimiz size özel olarak hazırlanır.</div>
+                    <div class="faq-answer">Sistemlerimiz size özel olarak hazırlanır.
                     <p>- 7/24 sistemler çalışır <p>
                     <p>- Sistemler hergün bakım yapılır <p>
-                   <p> - sizin verdiğiniz bilgiler doğrultusunda 10 çalışana eş değerdir <p>
+                   <p> - sizin verdiğiniz bilgiler doğrultusunda 10 çalışana eş değerdir <p></div>
                 </div>
                 <div class="faq-item">
                     <div class="faq-question">FİYATLANDIRMA <i class="fas fa-chevron-down"></i></div>
